change opengraph cover, fixed resposive

--- a/src/components/shared/header.module.styl
+++ b/src/components/shared/header.module.styl
@@ -58,7 +58,12 @@ colorRoute = #333333
 @media (max-width: 1000px)
     .header
         width: 65%
+        
+        .nav
+            .header-links
+                    .header-link
+                        margin-right: 1.2rem
 
 @media (max-width: 800px)
     .header
-        width: 85%
+        width: 90%
