--- a/src/components/vcard.module.styl
+++ b/src/components/vcard.module.styl
@@ -51,7 +51,11 @@
                 font-size: 3rem
 
     .vcard
+        align-items: center
+        flex-direction: column-reverse
+
         .vcard-photo
-            display: none
+            display: block
+            margin: 0
     
     
