--- a/src/layout/layout.module.styl
+++ b/src/layout/layout.module.styl
@@ -11,7 +11,7 @@ html
 body
     margin: 0
     padding: 0
-    background-color: #fffbf8
+    background-color: #fffdfb
     font-family: 'Inconsolata','Helvetica Neue','Segoe UI','Helvetica','Arial',sans-serif
 
 pre
@@ -73,5 +73,5 @@ blockquote
 
 @media (max-width: 800px)
     .container
-        width: 85%
+        width: 90%
     
