--- a/src/templates/blog.module.styl
+++ b/src/templates/blog.module.styl
@@ -45,4 +45,14 @@
         a
             font-weight: bold
             color: #f35757
-        
+
+@media (max-width: 500px)
+    .blog-header
+        figure
+            display: none
+
+@media (max-width: 500px)
+    .blog-header
+
+        figure
+            display: none
