share on facebook button disable and update project orec-ex content

--- a/src/components/shared/share.module.styl
+++ b/src/components/shared/share.module.styl
@@ -29,3 +29,8 @@
             width: 100%
 #u_0_0
     width: 100%
+
+.notice-info
+    background-color: #92dfff
+    padding: 8px
+    font-size: 14px !important
