new post entorno-de-desarrollo-de-laravel-con-docker

--- a/src/templates/blog.module.styl
+++ b/src/templates/blog.module.styl
@@ -46,6 +46,9 @@
             font-weight: bold
             color: #f35757
 
+        li
+            margin: 5px 0
+
 @media (max-width: 500px)
     .blog-header
         figure
