--- a/src/layout/layout.module.styl
+++ b/src/layout/layout.module.styl
@@ -58,20 +58,30 @@ blockquote
     .content
         flex-grow: 1
 
+.container-message
+    border 4px solid #fdaf1f
+    width 40%
+    max-width 800px
+    margin 10px auto
+    padding 2px 18px
+    font-weight bold
+    font-size: 1.2em
+    color hsl(39, 80%, 48%)
+    // color #1c1820
 
 @media (max-width: 1800px)
-    .container
+    .container, .container-message
         width: 45%
     
 @media (max-width: 1400px)
-    .container
+    .container, .container-message
         width: 55%
 
 @media (max-width: 1000px)
-    .container
+    .container, .container-message
         width: 65%
 
 @media (max-width: 800px)
-    .container
+    .container, .container-message
         width: 90%
     
